--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,7 +7,10 @@
     }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "app.js" }
+    { "src": "/(.*)", "dest": "app.js" ,  "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }}
   ]
   
 }
